--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -6,5 +6,6 @@
     "services": "الخدمات",
     "contactUs": "اتصل بنا",
     "signup": "التسجيل",
-    "signin": "تسجيل الدخول"
+    "signin": "تسجيل الدخول",
+    "theme": "الألوان"
   }
