--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -6,5 +6,6 @@
     "services": "Services",
     "contactUs": "Contact",
     "signup": "Sign Up",
-    "signin": "Sign In"
+    "signin": "Sign In",
+    "theme": "Theme"
 }
