new register page
new student register page

--- a/kalima-platform/frontend/public/locales/ar/studentReviews.json
+++ b/kalima-platform/frontend/public/locales/ar/studentReviews.json
@@ -1,3 +1,4 @@
 {
-    "title": "تجارب الطلاب",
-    "viewMore": "عرض المزيد"}
+    "title": "آراء الطلاب",
+    "viewMore": "عرض المزيد",
+    "description":"ماذا يقول طلابنا عن تجربتهم مع المحتوى التعليمي؟"}
