--- a/kalima-platform/frontend/public/locales/en/studentReviews.json
+++ b/kalima-platform/frontend/public/locales/en/studentReviews.json
@@ -1,3 +1,4 @@
- { "title": "Student Experiences",
-    "viewMore": "View More"
+ { "title": "Student Reviews",
+    "viewMore": "View More",
+    "description":"What do our students say about their experience with educational content?"
 } 
