--- a/kalima-platform/frontend/public/locales/en/register.json
+++ b/kalima-platform/frontend/public/locales/en/register.json
@@ -39,6 +39,7 @@
       "parentDetails": "Parent Details",
       "schoolDetails" : "School Details & Study",
       "password": "Password",
+      "confirmPassword": "Confirm Password",  
       "childrenDetails": "Children Details",
       "childId": "Child ID"
     },
