--- a/kalima-platform/frontend/public/locales/ar/login.json
+++ b/kalima-platform/frontend/public/locales/ar/login.json
@@ -3,9 +3,24 @@
     "welcome": "مرحبًا! سجل الدخول للوصول إلى حسابك والاستمتاع بخدماتنا",
     "offline_warning": "أنت غير متصل بالإنترنت حاليًا. قد تكون بعض الميزات محدودة",
     "email_label": "البريد الإلكتروني",
+    "phone_label": "رقم الهاتف",
+    "email_tab": "البريد الإلكتروني",
+    "phone_tab": "رقم الهاتف",
     "password_label": "كلمة المرور",
     "forgot_password": "نسيت كلمة المرور؟",
     "login_button": "تسجيل الدخول",
     "register_prompt": "هل تحتاج إلى حساب؟ سجل هنا",
-    "offline_alert": "أنت غير متصل بالإنترنت. يرجى الاتصال بالإنترنت والمحاولة مرة أخرى"
+    "offline_alert": "أنت غير متصل بالإنترنت. يرجى الاتصال بالإنترنت والمحاولة مرة أخرى",
+    "loginNow": "سجل الدخول الآن!",
+    "loginWelcome": "مرحبًا! سجل الدخول للوصول إلى لوحة تحكم المعلم والموارد التعليمية",
+    "phoneTab": "هاتف",
+    "emailTab": "بريد إلكتروني",
+    "emailLabel": "البريد الإلكتروني",
+    "phoneLabel": "رقم الهاتف",
+    "passwordLabel": "كلمة المرور",
+    "forgotPassword": "هل نسيت كلمة المرور؟",
+    "loggingIn": "جاري تسجيل الدخول...",
+    "login": "تسجيل الدخول",
+    "needAccount": "ليس لديك حساب؟",
+    "register": "سجل هنا"
   }
