--- a/kalima-platform/frontend/public/locales/en/login.json
+++ b/kalima-platform/frontend/public/locales/en/login.json
@@ -7,5 +7,17 @@
     "forgot_password": "Forgot password?",
     "login_button": "Login",
     "register_prompt": "Need an account? Register here",
-    "offline_alert": "You are offline. Please connect to the internet and try again."
+    "offline_alert": "You are offline. Please connect to the internet and try again.",
+    "loginNow": "Login Now!",
+    "loginWelcome": "Welcome! Sign in to access your teacher dashboard and resources",
+    "phoneTab": "Phone",
+    "emailTab": "Email",
+    "emailLabel": "Email Address",
+    "phoneLabel": "Phone Number",
+    "passwordLabel": "Password",
+    "forgotPassword": "Forgot password?",
+    "loggingIn": "Logging in...",
+    "login": "Login",
+    "needAccount": "Don't have an account?",
+    "register": "Register here"
   }
