--- a/kalima-platform/frontend/public/locales/ar/studentReviews.json
+++ b/kalima-platform/frontend/public/locales/ar/studentReviews.json
@@ -1,4 +1,7 @@
 {
     "title": "آراء الطلاب",
     "viewMore": "عرض المزيد",
-    "description":"ماذا يقول طلابنا عن تجربتهم مع المحتوى التعليمي؟"}
+    "description":"ماذا يقول طلابنا عن تجربتهم مع المحتوى التعليمي؟",
+    "TeacherTitle": "شهادات المعلمين",
+    "TeacherDescription": "شاهد ما يقوله المعلمون عن منصتنا التعليمية"
+}
