--- a/kalima-platform/frontend/public/locales/en/studentReviews.json
+++ b/kalima-platform/frontend/public/locales/en/studentReviews.json
@@ -1,4 +1,6 @@
  { "title": "Student Reviews",
     "viewMore": "View More",
-    "description":"What do our students say about their experience with educational content?"
+    "description":"What do our students say about their experience with educational content?",
+    "TeacherTitle": "Teacher Testimonials",
+    "TeacherDescription": "See what educators are saying about our teaching platform"
 } 
