--- a/kalima-platform/frontend/public/locales/ar/footer.json
+++ b/kalima-platform/frontend/public/locales/ar/footer.json
@@ -8,7 +8,6 @@
       "teachers": "المعلمين",
       "services": "الخدمات",
       "resources": "الملفات",
-      "aboutText": "منصة كلمة هي منصة تعليم إلكتروني توفر المنصة موارد للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي.",
-      "copyright": "@حقوق النشر 2025 {platform} | طور بواسطة فريق {team}, جميع الحقوق محفوظة."
+      "aboutText": "منصة كلمة هي منصة تعليم إلكتروني توفر المنصة موارد للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي."
     
   }
