teachers page translated

--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -7,5 +7,14 @@
     "contactUs": "اتصل بنا",
     "signup": "التسجيل",
     "signin": "تسجيل الدخول",
-    "theme": "الألوان"
+    "theme": "الألوان",
+    "landing": {
+    "welcome": "مرحبا بك في منصة {{platform}}",
+    "platformName": "كلمة",
+    "description": "منصة كلمة هي منصة تعليم إلكتروني توفر المنصة موارد للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي.",
+    "whoAreYou": "من انـــــــت ؟",
+    "teacher": "معلم",
+    "student": "طالب",
+    "logoAlt": "شعار كلمة"
+  }
   }
