--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -9,7 +9,7 @@
     "signin": "تسجيل الدخول",
     "theme": "الألوان",
     "landing": {
-    "welcome": "مرحبا بك في منصة {{platform}}",
+    "welcome": "مرحبا بك في منصة ",
     "platformName": "كلمة",
     "description": "منصة كلمة هي منصة تعليم إلكتروني توفر المنصة موارد للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي.",
     "whoAreYou": "من انـــــــت ؟",
