--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -9,8 +9,8 @@
     "signin": "Sign In",
     "theme": "Theme",
     "landing": {
-    "welcome": "Welcome to the {{platform}} Platform",
-    "platformName": "Kalima",
+    "welcome": "Welcome to the platform of ",
+    "platformName": "Kalima ",
     "description": "Kalima is an e-learning platform that provides educational resources for students from fourth grade through twelfth grade, offering comprehensive learning materials and interactive tools.",
     "whoAreYou": "Who are you?",
     "teacher": "Teacher",
