--- a/kalima-platform/frontend/public/locales/en/login.json
+++ b/kalima-platform/frontend/public/locales/en/login.json
@@ -3,6 +3,9 @@
     "welcome": "Welcome back! Log in to access your account and enjoy our services.",
     "offline_warning": "You are currently offline. Some features may be limited.",
     "email_label": "Email",
+    "phone_label": "Phone",
+    "email_tab": "Email",
+    "phone_tab": "Phone",
     "password_label": "Password",
     "forgot_password": "Forgot password?",
     "login_button": "Login",
