Added Lecture pages, added UserDashboard.

--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -4,6 +4,7 @@
     "educationalCourses": "Courses",
     "teachers": "Teachers",
     "services": "Services",
+    "lectures": "Lectures",
     "contactUs": "Contact",
     "signup": "Sign Up",
     "signin": "Sign In",
