--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -4,6 +4,7 @@
     "educationalCourses": "الدورات التعليمية",
     "teachers": "المعلمين",
     "services": "الخدمات",
+    "lectures": "المحاضرات",
     "contactUs": "اتصل بنا",
     "signup": "التسجيل",
     "signin": "تسجيل الدخول",
