promo code translation

--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -17,5 +17,15 @@
     "teacher": "معلم",
     "student": "طالب",
     "logoAlt": "شعار كلمة"
-  }
+  },
+  "dashboard": "لوحة القيادة",
+  "profile": "معلوماتي",
+  "courses": "كورساتي",
+  "promoCodes": "اكواد الشحن",
+  "assignments": "الواجب",
+  "exams": "الاختبارات",
+  "settings": "الاعدادات",
+  "logout": "تسجيل الخروج",
+  "dashboardTitle": "لوحة القيادة",
+  "toggleSidebar": "تبديل القائمة الجانبية"
   }
