--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -27,5 +27,6 @@
   "settings": "الاعدادات",
   "logout": "تسجيل الخروج",
   "dashboardTitle": "لوحة القيادة",
-  "toggleSidebar": "تبديل القائمة الجانبية"
+  "toggleSidebar": "تبديل القائمة الجانبية",
+  "myPage": "صفحتي"
   }
