--- a/kalima-platform/frontend/public/locales/ar/courses.json
+++ b/kalima-platform/frontend/public/locales/ar/courses.json
@@ -9,7 +9,8 @@
       "grade": "الصف الدراسي",
       "term": "الترم الدراسي",
       "type": "نوع الكورس",
-      "status": "حالة الكورس"
+      "status": "حالة الكورس",
+      "subject": "المادة الدراسية"
     },
     "stages": {
       "primary": "المرحلة الابتدائية",
