--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -27,5 +27,6 @@
   "settings": "Settings",
   "logout": "Logout",
   "dashboardTitle": "Control Panel",
-  "toggleSidebar": "Toggle Sidebar"
+  "toggleSidebar": "Toggle Sidebar",
+  "myPage": "My Page"
 }
