--- a/kalima-platform/frontend/public/locales/en/courses.json
+++ b/kalima-platform/frontend/public/locales/en/courses.json
@@ -9,7 +9,8 @@
       "grade": "Grade",
       "term": "Term",
       "type": "Course Type",
-      "status": "Course Status"
+      "status": "Course Status",
+      "subject": "Subject"
     },
     "stages": {
       "primary": "Primary Stage",
