--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -28,5 +28,9 @@
   "logout": "Logout",
   "dashboardTitle": "Control Panel",
   "toggleSidebar": "Toggle Sidebar",
-  "myPage": "My Page"
+  "myPage": "My Page",
+  "adminDashboard"  : "Admin Dashboard",
+  "centerDashboard"  : "Center Dashboard",
+  "auditLog": "Audit Log",
+  "myDashboard": "My Dashboard"
 }
