--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -32,5 +32,6 @@
   "adminDashboard"  : "لوحة تحكم المسؤول",
   "centerDashboard"  : "لوحة تحكم المركز",
   "auditLog": "سجل التدقيق",
-  "myDashboard": "لوحة التحكم"
+  "myDashboard": "لوحة التحكم",
+  "Packages": "الباقات"
   }
