--- a/kalima-platform/frontend/public/locales/ar/courses.json
+++ b/kalima-platform/frontend/public/locales/ar/courses.json
@@ -10,7 +10,10 @@
       "term": "الترم الدراسي",
       "type": "نوع الكورس",
       "status": "حالة الكورس",
-      "subject": "المادة الدراسية"
+      "subject": "المادة الدراسية",
+      "price": "سعر الكورس",
+      "select" : "اختر",
+      "all" : "الكل"
     },
     "stages": {
       "primary": "المرحلة الابتدائية",
