--- a/kalima-platform/frontend/public/locales/en/lectures.json
+++ b/kalima-platform/frontend/public/locales/en/lectures.json
@@ -1,18 +1,36 @@
 {
-    
-      "title": "Lectures",
-      "filters": {
-        "stage": "Stage",
-        "grade": "Grade",
-        "subject": "Subject",
-        "status": "Status",
-        "reset": "Reset Filters"
-      },
-      "search": {
-        "options": "More Options"
-      },
-      "showLectures": "Show Lectures",
-      "discover": "Discover Available Lectures",
-      "noLectures": "No lectures available"
-    
-  }
+  "title": "Lectures",
+  "discover": "Discover Our Latest Lectures",
+  "showLectures": "Show Lectures",
+  "noLectures": "No lectures found matching the selected filters.",
+  "filters": {
+    "reset": "Reset Filters",
+    "stage": "Instructor Role",
+    "grade": "Grade",
+    "subject": "Subject",
+    "status": "Status",
+    "stages": {
+      "lecturer": "Lecturer",
+      "professor": "Professor"
+    },
+    "statuses": {
+      "free": "Free",
+      "paid": "Paid"
+    }
+  },
+  "search": {
+    "options": "Search Options"
+  },
+  "levels": {
+  "Primary": "Primary",
+  "Middle": "Middle",
+  "Upper Primary": "Upper Primary",
+  "Higher Secondary": "Higher Secondary",
+  "Fourth Elementary": "Fourth Elementary",
+  "First Primary": "First Primary",
+  "Second Primary": "Second Primary",
+  "Third Primary": "Third Primary",
+  "First Secondary": "First Secondary",
+  "Second Secondary": "Second Secondary",
+  "Third Secondary": "Third Secondary"
+}
